--- a/content/css/style.css
+++ b/content/css/style.css
@@ -30,6 +30,14 @@ footer{
   color: white;
 }
 
+.registrationContainer
+{
+  background-color: #f79f7949;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+
 .fab
 {
     background-color: #F79F79;
