Initial Index Page Commit with Staging Updates
The CSS in Staging was updated to resolve issues to do with the padding on certain elements on the page, I have created this branch so I can update the CSS to reduce the amount of conflicts when I eventually go to merge this branch into the Staging branch.

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -36,6 +36,18 @@ footer {
   color: white;
 }
 
+/* HOME PAGE CSS */
+
+.index-title {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 5em;
+  color: black;
+  text-align: center;
+  margin-top: 10%;
+}
+
+/* END OF HOME PAGE CSS */
+
 .registrationContainer {
   background-color: #f79f7949;
   border-radius: 25px;
