Organised Index Page Containers
I have organised the index page so the containers appear in the correct order. There is a gap in-between the containers currently where the background circles do not appear which looks messy, that is my next step with the index page.

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -28,8 +28,6 @@ main{
 footer {
   height: 50px;
   background-color: #f79f79;
-  bottom: 0;
-  position: absolute;
 }
 
 #privPolicy {
@@ -44,6 +42,32 @@ footer {
   color: black;
   text-align: center;
   margin-top: 10%;
+}
+
+.homeContainer {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 100vh 100vh;
+  grid-template-areas: 'homeCover'
+                       'homeParallax';
+  box-sizing: border-box;
+  flex-direction: column;
+  padding: 0;
+}
+
+.homeCover {
+  grid-area: homeCover;
+  min-height: 100vh;
+}
+
+.homeParallax {
+  grid-area: homeParallax;
+  min-height: 100vh;
+  background-image: url('../imgs/temp.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0;
+  padding: 0;
 }
 
 /* END OF HOME PAGE CSS */
