--- a/content/css/style.css
+++ b/content/css/style.css
@@ -130,6 +130,7 @@ footer {
 .homeFeature {
   display: flex;
   background-color: #E3F2FD;
+  border-radius: 20px;
   color: black;
   flex-direction: column;
   align-items: center;
