Minor Styling Changes
This is just a few changes which affect the styling of the boxes so it doesn't go outside the width of the container anymore. Some of the code here is temporary and I am uploading so I can continue working on this at home or on Tuesday at Uni.

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -127,16 +127,29 @@ footer {
   z-index: +1;
 }
 
+/* .homeFeatureSegment {
+  
+  padding: 0px !important;
+  width: 30%
+} */
+
+.homeRow {
+  max-width: 90%;
+}
+
 .homeFeature {
-  display: flex;
+  /* display: flex; */
   background-color: #E3F2FD;
   border-radius: 20px;
   color: black;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 25px;
-  margin: 25px;
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  padding: 15px;
+  margin: 15px;
+  text-wrap: balance;
+  text-align: center;
+  
 }
 
 /* END OF HOME PAGE CSS */
