--- a/content/css/style.css
+++ b/content/css/style.css
@@ -58,18 +58,21 @@ body
   padding: 0;
 }
 
+.indexLoginButton {
+  margin-top: 25px;
+  text-decoration: underline;
+}
+
 .indexScrollDown {
   margin: 0;
   position: absolute;
   top: 93%;
-  left: 50%;
-  transform: translate(-50%, -10%);
   color: black;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 20px;
   letter-spacing: 3px;
-  animation: fadeInScrollDown 3s;
+  animation: fadeInScrollDown 3s, pulse 3s infinite;
 }
 
 .indexScrollDown p {
@@ -87,6 +90,18 @@ body
   }
 }
 
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 /* This is the second section in the container */
 
 .indexFeaturesTitle {
@@ -94,7 +109,8 @@ body
   font-size: 6em;
   color: white;
   text-align: center;
-  margin-top: 10%;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .homeFeaturesContainer {
@@ -109,29 +125,19 @@ body
   z-index: +1;
 }
 
-/* .homeFeatureSegment {
-  
-  padding: 0px !important;
-  width: 30%
-} */
-
 .homeFeaturesRow {
   max-width: 90%;
 }
 
 .homeFeature {
-  /* display: flex; */
   background-color: #E3F2FD;
   border-radius: 20px;
   color: black;
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: center; */
   padding: 15px;
   margin: 15px;
   text-wrap: balance;
   text-align: center;
-  
+  height: 90%;
 }
 
 /* END OF HOME PAGE CSS */
