Creation of testSelectionDisplay Script and editing of Script.js and retrieveTests function to allow for compatability.

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -17,7 +17,7 @@ body
 
 /*BACKGROUND ANIMATION*/
 .circles {
-  position: absolute;
+  position: fixed;
   pointer-events: none;
   top: 0;
   left: 0;
