Adding Comments and Cleanup
I have added comments to make the index page clearer to read in preparation to push to staging.
I have also removed some redundant code in the CSS to reduce the amount of unnecessary lines and make it more readable.

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -36,7 +36,6 @@ body
 }
 
 .indexTitle {
-  font-family: 'Montserrat', sans-serif;
   font-size: 6em;
   color: black;
   text-align: center;
@@ -53,8 +52,7 @@ body
   font-family: 'Roboto', sans-serif;
   font-size: 1.75em;
   color: black;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin: 0% 10%;
   padding: 0;
 }
 
@@ -105,7 +103,6 @@ body
 /* This is the second section in the container */
 
 .indexFeaturesTitle {
-  font-family: 'Montserrat', sans-serif;
   font-size: 6em;
   color: white;
   text-align: center;
