Setting up the question style
I am setting up the container for the testing page and have added the question div along with the styling for it. The question div uses similar styling to the features div on the index page, it will be contained in a box similar to how the Registration and Login page looks.

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -15,7 +15,6 @@ body
   color: black;
 }
 
-/* ============= */
 /* HOME PAGE CSS */
 
 .homeContainer {
@@ -89,7 +88,19 @@ body
 }
 
 /* END OF HOME PAGE CSS */
-/* ==================== */
+
+/* TESTING PAGE CSS */
+
+.testingQuestion {
+  background-color: #E3F2FD;
+  border-radius: 20px;
+  color: black;
+  padding: 15px;
+  text-wrap: balance;
+  text-align: center;
+}
+
+/* END OF TESTING PAGE CSS */
 
 /*BACKGROUND ANIMATION*/
 .circles {
