--- a/content/css/style.css
+++ b/content/css/style.css
@@ -100,6 +100,10 @@ body
   text-align: center;
 }
 
+.testingOption {
+  margin: 10px 0px;
+}
+
 /* END OF TESTING PAGE CSS */
 
 /*BACKGROUND ANIMATION*/
