--- a/public_static/css/style.css
+++ b/public_static/css/style.css
@@ -72,7 +72,7 @@ body
 }
 
 .homeFeaturesContainer {
-  background-image: url('./public_static/imgs/indexBackground.jpg');
+  background-image: url('/public_static/imgs/indexBackground.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
